Add changed-leaf-nodes-only subscription extension
The behaviour of this extension is almost the same of
the odl-leaf-nodes-only except additional check is performed
where nodes containing the same data after write into them
are not contained in the notification that is being sent.
Unit tests contain cases for nested choice node serialization

JIRA: NETCONF-862
Change-Id: I9775b51b782f30161c6e33f5a0ac36326eb47d44
Signed-off-by: Peter Puškár <ppuskar@frinx.io>
Signed-off-by: Branislav Malo <bmalo@frinx.io>
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>